<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/profileFragment">

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.kodiiiofc.urbanuniversity.diary.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/todoFragment"
        android:name="com.kodiiiofc.urbanuniversity.diary.ui.todo.TodoFragment"
        android:label="@string/todo"
        tools:layout="@layout/fragment_todo" />
    <fragment
        android:id="@+id/weatherFragment"
        android:name="com.kodiiiofc.urbanuniversity.diary.ui.weather.WeatherFragment"
        android:label="@string/weather"
        tools:layout="@layout/fragment_weather" />
</navigation>