<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.weather.WeatherFragment"
    android:padding="8dp">

        <TextView
            android:id="@+id/city_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_city"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.15" />

        <ImageView
            android:id="@+id/icon_iv"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="36dp"
            android:importantForAccessibility="no"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/city_tv"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/temp_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/units_deg_c"
            android:textAppearance="?android:attr/textAppearanceMedium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/icon_iv"
            app:layout_constraintEnd_toStartOf="@id/pressure_tv"
            android:layout_marginTop="32dp"/>

        <TextView
            android:id="@+id/pressure_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/units_pressure"
            android:textAppearance="?android:attr/textAppearanceMedium"
            app:layout_constraintBottom_toBottomOf="@id/temp_tv"
            app:layout_constraintStart_toEndOf="@id/temp_tv"
            app:layout_constraintTop_toTopOf="@id/temp_tv"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/wind_deg_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/tv_wind_deg"
            android:textAppearance="?android:attr/textAppearanceMedium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/wind_speed_tv"
            app:layout_constraintTop_toBottomOf="@id/temp_tv" />

        <TextView
            android:id="@+id/wind_speed_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/units_wind_speed"
            android:textAppearance="?android:attr/textAppearanceMedium"
            app:layout_constraintStart_toEndOf="@id/wind_deg_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/wind_deg_tv" />

        <TextView
            android:id="@+id/humidity_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/tv_humidity"
            android:textAppearance="?android:attr/textAppearanceMedium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/wind_deg_tv" />

        <EditText
            android:id="@+id/city_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/update_btn"
            android:layout_marginEnd="8dp"
            app:layout_constraintVertical_bias="0.8"
            android:hint="@string/city_et"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/update_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/city_et"
            app:layout_constraintBottom_toBottomOf="@id/city_et"
            style="@style/Widget.MaterialComponents.Button"/>

</androidx.constraintlayout.widget.ConstraintLayout>